--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,8 @@ GOOGLE_CLIENT_ID=<>
 GOOGLE_CLIENT_SECRET=<>
 FLASK_SECRET=<>
 
+FLASK_ENV=<dev/prod>
+
 FRONTEND_ORIGIN_DEV=<>
 REDIRECT_URI_DEV=<>
 
