--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,7 @@ GOOGLE_CLIENT_ID=<>
 GOOGLE_CLIENT_SECRET=<>
 FLASK_SECRET=<>
 
-FLASK_ENV=<dev/prod>
+FLASK_ENV=<dev/production>
 
 FRONTEND_ORIGIN_DEV=<>
 REDIRECT_URI_DEV=<>
