--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@icons-pack/react-simple-icons": "^13.4.0",
     "@luminescent/ui": "5.0.1-2",
     "@luminescent/ui-react": "5.0.1-2",
+    "@react-router/node": "^7.6.3",
     "@tailwindcss/vite": "^4.1.11",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
+    "isbot": "^5",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@react-router/dev": "^7.6.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
