--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@luminescent/ui-react": "5.0.1-2",
     "@react-router/node": "^7.6.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@uiw/react-codemirror": "^4.24.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-search": "^0.15.0",
     "@xterm/addon-web-links": "^0.11.0",
