rewrite for prod/dev compatibility

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,4 @@
 # VITE_ENVIRONMENT=production
 # VITE_PROD_BACKEND_URL=https://api.3compute.org
 
-VITE_BACKEND_URL=http://localhost:5555
+VITE_BACKEND_URL=http://127.0.0.1:5555
