--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,10 +2,10 @@ GOOGLE_CLIENT_ID=<>
 GOOGLE_CLIENT_SECRET=<>
 FLASK_SECRET=<>
 
-FLASK_ENV=<dev/production>
-
 FRONTEND_ORIGIN_DEV=<>
 REDIRECT_URI_DEV=<>
 
+FLASK_ENV=<> # development or production
 FRONTEND_ORIGIN_PROD=<>
 REDIRECT_URI_PROD=<>
+PORT_BASE=<>
