--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -20,10 +20,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '22'
-          cache: 'pnpm'
 
-      - name: Enable pnpm (Corepack)
-        run: corepack enable
+      - name: Install pnpm
+        run: npm install -g pnpm
 
       - name: Build frontend
         working-directory: frontend
