backend workflow .env fix

--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -10,24 +10,36 @@ jobs:
   build:
     runs-on: ubuntu-22.04
 
+    strategy:
+      matrix:
+        node-version: [22]
+
     steps:
       - name: Checkout full repo
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # full history
 
-      - name: Setup Node.js and pnpm
+      - uses: actions/checkout@v4
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: '22'
+          node-version: ${{ matrix.node-version }}
+          cache: 'pnpm'
 
-      - name: Install pnpm
-        run: npm install -g pnpm
+      - name: Install dependencies
+        working-directory: frontend
+        run: |
+          pnpm i
 
       - name: Build frontend
         working-directory: frontend
         run: |
-          pnpm install
           pnpm build
 
       - name: Setup Python + venv
