--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,4 +8,4 @@ REDIRECT_URI_DEV=<>
 FLASK_ENV=<> # development or production
 FRONTEND_ORIGIN_PROD=<>
 REDIRECT_URI_PROD=<>
-PORT_BASE=<>
+PORT_BASE=0
