--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,10 +3,13 @@ blinker==1.9.0
 certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.1.8
+dnspython==2.7.0
+eventlet==0.40.1
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-Login==0.6.3
 Flask-SocketIO==5.5.1
+greenlet==3.2.3
 h11==0.16.0
 idna==3.10
 itsdangerous==2.2.0
