--- a/.github/workflows/check-build.yml
+++ b/.github/workflows/check-build.yml
@@ -49,4 +49,4 @@ jobs:
         run: |
           source .venv/bin/activate
           cp backend/.env.example backend/.env
-          timeout 5s python3 -m backend
+          timeout 5s python3 -m backend || [[ $? == 124 ]]
