--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,9 @@
     "@luminescent/ui-react": "5.0.1-2",
     "@react-router/node": "^7.6.3",
     "@tailwindcss/vite": "^4.1.11",
+    "@uiw/codemirror-extensions-color": "^4.24.0",
+    "@uiw/codemirror-extensions-hyper-link": "^4.24.0",
+    "@uiw/codemirror-theme-tokyo-night": "^4.24.0",
     "@uiw/react-codemirror": "^4.24.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-search": "^0.15.0",
