--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "@luminescent/ui": "5.0.1-2",
     "@luminescent/ui-react": "5.0.1-2",
     "@react-router/node": "^7.6.3",
+    "@replit/codemirror-indentation-markers": "^6.5.3",
     "@tailwindcss/vite": "^4.1.11",
     "@uiw/codemirror-extensions-color": "^4.24.0",
     "@uiw/codemirror-extensions-hyper-link": "^4.24.0",
