fixes alpine docker user

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,14 +12,14 @@ RUN apk update && apk add --no-cache \
  && ln -sf python3 /usr/bin/python
 
 # Create a non-root user matching the dedicated host system user
-RUN groupadd -g 995 3compute-container \
-    && useradd -m -u 999 -g 995 myuser \
+RUN addgroup -g 995 3compute-container \
+    && adduser -D -u 999 -G 3compute-container myuser \
     && mkdir /app \
-    && chown myuser:myuser /app
+    && chown 999:995 /app
 
 # Copy our tmux config for the myuser home
 COPY tmux.conf /home/myuser/.tmux.conf
-RUN chown myuser:myuser /home/myuser/.tmux.conf
+RUN chown 999:995 /home/myuser/.tmux.conf
 
 USER myuser
 WORKDIR /app
