--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,15 +26,15 @@
     "@codemirror/lang-python": "^6.2.1",
     "@codemirror/lang-rust": "^6.0.2",
     "@codemirror/lang-sass": "^6.0.2",
-    "@codemirror/lang-sql": "^6.9.0",
+    "@codemirror/lang-sql": "^6.9.1",
     "@codemirror/lang-vue": "^0.1.3",
     "@codemirror/lang-wast": "^6.0.2",
     "@codemirror/lang-xml": "^6.1.0",
     "@codemirror/lang-yaml": "^6.1.2",
-    "@icons-pack/react-simple-icons": "^13.5.0",
-    "@luminescent/ui": "5.0.1-6",
-    "@luminescent/ui-react": "5.0.1-6",
-    "@react-router/node": "^7.6.3",
+    "@icons-pack/react-simple-icons": "^13.7.0",
+    "@luminescent/ui": "5.1.0",
+    "@luminescent/ui-react": "5.1.0",
+    "@react-router/node": "^7.7.1",
     "@replit/codemirror-indentation-markers": "^6.5.3",
     "@tailwindcss/vite": "^4.1.11",
     "@uiw/codemirror-extensions-color": "^4.24.1",
@@ -46,26 +46,26 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/xterm": "^5.5.0",
     "isbot": "^5",
-    "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "lucide-react": "^0.533.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
-    "react-router": "^7.6.3",
+    "react-router": "^7.7.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
-    "@eslint/js": "^9.31.0",
-    "@react-router/dev": "^7.6.3",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.31.0",
+    "@eslint/js": "^9.32.0",
+    "@react-router/dev": "^7.7.1",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react": "^4.7.0",
+    "eslint": "^9.32.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "typescript": "~5.8.3",
-    "typescript-eslint": "^8.37.0",
-    "vite": "^7.0.4"
+    "typescript-eslint": "^8.38.0",
+    "vite": "^7.0.6"
   }
 }
