--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,4 +58,4 @@ jobs:
       - name: Run backend tests
         run: |
           source .venv/bin/activate
-          python -m pytest /backend --cov=backend --cov-report=xml --cov-report=term-missing
+          python -m pytest backend/ --cov=backend --cov-report=xml --cov-report=term-missing
