classroms templates working

--- a/backend/tmux.conf
+++ b/backend/tmux.conf
@@ -1,8 +1,13 @@
 # Disable the bottom status bar
 set-option -g status off
 
-# Turn mouse support off so tmux doesn’t capture scroll/selection
+# Turn mouse support completely off so xterm.js handles scrolling
 set-option -g mouse off
 
 # Disable alternate-screen switching (so xterm.js can handle its own buffer)
 set-option -ga terminal-overrides ',xterm*:smcup@:rmcup@'
+
+# Ensure mouse is disabled for all modes
+set-option -g -q mouse-select-pane off
+set-option -g -q mouse-resize-pane off
+set-option -g -q mouse-select-window off
