make example template for tic-tac-toe

--- a/frontend/public/templateProjects/manifest.json
+++ b/frontend/public/templateProjects/manifest.json
@@ -10,5 +10,11 @@
     "main.py",
     "README.md",
     "requirements.txt"
+  ],
+  "AI-Game": [
+    "main.py",
+    "test_game.py",
+    "README.md",
+    "requirements.txt"
   ]
 }
