fix terminal scrolling

--- a/backend/tmux.conf
+++ b/backend/tmux.conf
@@ -1,13 +1,17 @@
 # Disable the bottom status bar
 set-option -g status off
 
-# Turn mouse support completely off so xterm.js handles scrolling
-set-option -g mouse off
+# Enable mouse support so scrolling works via tmux's scrollback buffer
+set-option -g mouse on
 
-# Disable alternate-screen switching (so xterm.js can handle its own buffer)
+# Set large scrollback buffer (tmux manages scrollback, not xterm.js)
+set-option -g history-limit 10000
+
+# Scroll 2 lines at a time instead of default 5
+bind-key -T copy-mode WheelUpPane send-keys -X -N 2 scroll-up
+bind-key -T copy-mode WheelDownPane send-keys -X -N 2 scroll-down
+bind-key -T copy-mode-vi WheelUpPane send-keys -X -N 2 scroll-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X -N 2 scroll-down
+
+# Disable alternate-screen switching (so scrollback shows program output)
 set-option -ga terminal-overrides ',xterm*:smcup@:rmcup@'
-
-# Ensure mouse is disabled for all modes
-set-option -g -q mouse-select-pane off
-set-option -g -q mouse-resize-pane off
-set-option -g -q mouse-select-window off
